--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Form validation</title>
     <link rel="stylesheet" href="css/form.css" />
+    <script src="js/validate.js" charset="utf-8" ></script>
     <script src="js/form.js" charset="utf-8" defer></script>
   </head>
   <body>
